fix: update z-index values for comment card hover effects and improve touch interaction handling

--- a/src/app/main-component/comments/comments.component.scss
+++ b/src/app/main-component/comments/comments.component.scss
@@ -144,7 +144,7 @@
   }
 
   &:hover {
-    z-index: 10;
+    z-index: 50;
     
     .hover-line {
       opacity: 1;
@@ -371,7 +371,7 @@
 }
 
 .comment-card.touch-hover {
-  z-index: 10;
+  z-index: 50;
 
   .hover-line {
     opacity: 1;
